footer fixes, px to rem conversion

--- a/blocks/icon-link-list/icon-link-list.css
+++ b/blocks/icon-link-list/icon-link-list.css
@@ -1,8 +1,8 @@
 /* footer */
 footer .icon-link-list-container .icon{
-    margin-right: 12px;
-    width: 28px;
-    height: 32px;
+    margin-right: 0.75rem;
+    width: 1.75rem;
+    height: 2rem;
 }
 
 footer .icon-link-list-container .icon .icon-container
@@ -11,6 +11,6 @@ footer .icon-link-list-container .icon .icon-container
 }
 
 footer .icon-link-list-container .icon .icon-container img{
-    height: 28px;
+    height: 1.75rem;
     width: auto;
 }
