--- a/blocks/link-list/link-list.css
+++ b/blocks/link-list/link-list.css
@@ -17,26 +17,26 @@
 }
 
 .link-list-wrapper.horizontal .link-list-title {
-    margin: 0 32px 12px 0;
+    margin: 0 2rem 0.75rem 0;
     font-family: var(--fixed-font-family);
     color: var(--light-text-color);
-    font-size: 10px;
+    font-size: 0.625rem;
     text-transform: uppercase;
     font-weight: 300;
-    line-height: 12px;
-    letter-spacing: 2px;
+    line-height: 0.75rem;
+    letter-spacing: 0.125rem;
 }
 
 .link-list-wrapper.vertical .link-list-title {
     display: block;
     position: relative;
     font-family: var(--fixed-font-family);
-    padding-right: 24px;
-    margin: 0 0 24px;
+    padding-right: 1.5rem;
+    margin: 0 0 1.5rem;
     color: var(--medium-text-color);
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 700;
-    line-height: 20px;
+    line-height: 1.25rem;
     letter-spacing: normal;
     word-break: break-all;
     text-transform: none;
@@ -52,11 +52,11 @@
     font-family: "bmw_next_icons",arial,helvetica,roboto,sans-serif;
     transform: translate(25%, -50%);
     transition: transform .5s ease-in-out;
-    font-size: 24px;
+    font-size: 1.5rem;
     color: var(--medium-text-color);
     font-style: normal;
     font-weight: 400;
-    height: 24px;
+    height: 1.5rem;
     line-height: 1;
     outline: 1px solid transparent;
 }
@@ -73,9 +73,9 @@
 .link-list-wrapper.horizontal .link-list-detail ul li,
 .link-list-wrapper.horizontal .link-list-detail ul li a {
     font-family: var(--fixed-font-family);
-    font-size: 14px;
+    font-size: 0.875rem;
     color: var(--light-text-color);
-    line-height: 20px;
+    line-height: 1.25rem;
     font-weight: 700;
     word-break: break-all;
     text-decoration: none; 
@@ -112,27 +112,27 @@
 
 .link-list-wrapper.horizontal .link-list-detail ul li{
     display: inline-block;
-    margin-right: 10px;
+    margin-right: 0.625rem;
 }
 
 .link-list-wrapper.vertical .link-list-detail ul {
-    margin-bottom: 40px;
-    padding: 8px 0 8px 16px;
+    margin-bottom: 2.5rem;
+    padding: 0.5rem 0 0.5rem 1rem;
 }
 
 .link-list-wrapper.vertical .link-list-detail ul li,
 .link-list-wrapper.vertical .link-list-detail ul li a {
     font-family: var(--fixed-font-family);
-    font-size: 14px;
+    font-size: 0.875rem;
     color: var(--medium-text-color);
-    line-height: 20px;
+    line-height: 1.25rem;
     font-weight: 700;
     word-break: break-all;
     text-decoration: none; 
 }
 
 .link-list-wrapper.vertical .link-list-detail ul li{
-    margin-bottom: 24px;
+    margin-bottom: 1.5rem;
 }
 
 .link-list-wrapper.horizontal .link-list-detail ul li:last-child{    
@@ -172,12 +172,12 @@
 
     .link-list-wrapper.vertical .link-list-title {       
         padding-right: 0;
-        margin: 0 0 16px;
+        margin: 0 0 1rem;
         color: var(--medium-text-color);
-        font-size: 10px;
+        font-size: 0.625rem;
         font-weight: 300;
-        line-height: 12px;
-        letter-spacing: 2px;
+        line-height: 0.75rem;
+        letter-spacing: 0.125rem;
         word-break: break-all;
         text-transform: uppercase;
     }
@@ -193,11 +193,11 @@
     }
 
     .link-list-wrapper.vertical .link-list-detail ul {
-        margin-bottom: 48px;
+        margin-bottom: 3rem;
         padding: 0;
     }
 
     .link-list-wrapper.vertical .link-list-detail ul li{
-        margin-bottom: 12px;
+        margin-bottom: 0.75rem;
     }    
 }
