--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -7,7 +7,7 @@ footer .footer-grey-bg{
 }
 
 footer .footer .section{
-  padding: 32px 64px 20px;
+  padding: 2rem 4rem 1.25rem;
 }
 
 footer .footer .section:first-child {
@@ -15,16 +15,17 @@ footer .footer .section:first-child {
 }
 
 footer .footer .section:nth-child(2) {
-  padding-top: 48px;
-  padding-bottom: 32px;
+  padding-top: 3rem;
+  padding-bottom: 2rem;
 }
 
 footer .footer .section:nth-child(3) {
   display: flex;
   flex-direction: column;
-  gap: 32px;
+  gap: 2rem;
   justify-content: space-between;
   align-items: center;
+  padding-bottom: 2rem;
 }
 
 footer .footer .section:nth-child(3) .link-list-wrapper.horizontal{
@@ -36,11 +37,12 @@ footer .footer .section:nth-child(3) .link-list-wrapper.horizontal .link-list-de
 }
 
 footer .footer .section:nth-child(3) .link-list-wrapper.horizontal .link-list-detail li {
-  margin-right: 6px;
+  margin-right: 0.375rem;
 }
 
 footer .footer .section:nth-child(3) .link-list-wrapper.horizontal .link-list-detail li a{
-  font-size: 12px;
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 footer .footer .section:nth-child(3) .link-list-wrapper.horizontal .link-list-detail li:last-child {
@@ -54,11 +56,11 @@ footer .footer .section:nth-child(3) .link-list-wrapper.horizontal .link-list-ti
 /* tablet */
 @media (width >= 768px){
   footer .footer .section {
-    padding: 32px 48px 20px;
+    padding: 2rem 3rem 1.25rem;
   }
   
   footer .footer .section:nth-child(2) {   
-    padding-bottom: 32px;
+    padding-bottom: 2rem;
   }
 
   footer .footer .section:nth-child(3) {
@@ -69,11 +71,11 @@ footer .footer .section:nth-child(3) .link-list-wrapper.horizontal .link-list-ti
   }
 
   footer .footer .section:nth-child(3) .link-list-wrapper.horizontal .link-list-detail {
-    padding-left: 12px;
+    padding-left: 0.75rem;
   }
 
   footer .footer .section:nth-child(3) .link-list-wrapper.horizontal .link-list-detail li {
-    margin-right: 32px;
+    margin-right: 2rem;
   }
   
 }
@@ -81,12 +83,12 @@ footer .footer .section:nth-child(3) .link-list-wrapper.horizontal .link-list-ti
 /* desktop */
 @media (width >= 1280px) {
   footer .footer .section {
-    padding: 32px 96px 20px;
+    padding: 2rem 6rem 1.25rem;
   }
   
   footer .footer .section:nth-child(2) {
-    padding-top: 80px;
-    padding-bottom: 32px;
+    padding-top: 5rem;
+    padding-bottom: 2rem;
   }
 }
 
