--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -12,6 +12,7 @@ footer .footer .section{
 
 footer .footer .section:first-child {
   border-top: 1px solid var(--light-grey);
+  padding-bottom: 2rem;
 }
 
 footer .footer .section:nth-child(2) {
@@ -57,6 +58,10 @@ footer .footer .section:nth-child(3) .link-list-wrapper.horizontal .link-list-ti
 @media (width >= 768px){
   footer .footer .section {
     padding: 2rem 3rem 1.25rem;
+  }
+
+  footer .footer .section:first-child {
+    padding-bottom: 20px;
   }
   
   footer .footer .section:nth-child(2) {   
