--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@
  * governing permissions and limitations under the License.
  */
 
- :root {
+:root {
   /* colors */
   --link-color: #035fe6;
   --link-hover-color: #136ff6;
@@ -31,7 +31,7 @@
   /* --body-font-family: roboto, roboto-fallback;
   --heading-font-family: var(--body-font-family);
   */
-  --fixed-font-family: bmwtypenextweb,arial,helvetica,roboto,sans-serif;
+  --fixed-font-family: bmwtypenextweb, arial, helvetica, roboto, sans-serif;
 
   /* body sizes */
   --body-font-size-m: 22px;
@@ -56,9 +56,8 @@
   --breakpoint-large-desktop: 1920px;
 
   /* maximum width */
-  --max-component-width:1920px;
+  --max-component-width: 1920px;
 }
-
 
 @media (width >= 900px) {
   :root {
@@ -79,34 +78,56 @@ header {
   height: var(--nav-height);
 }
 
-h1, h2, h3,
-h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: var(--fixed-font-family);
   font-weight: 300;
   line-height: 1.25;
   margin-top: 1em;
-  margin-bottom: .5em;
+  margin-bottom: 0.5em;
   scroll-margin: calc(var(--nav-height) + 1em);
 }
 
-h1 { font-size: var(--heading-font-size-xxl) }
-h2 { font-size: var(--heading-font-size-xl) }
-h3 { font-size: var(--heading-font-size-l) }
-h4 { font-size: var(--heading-font-size-m) }
-h5 { font-size: var(--heading-font-size-s) }
-h6 { font-size: var(--heading-font-size-xs) }
+h1 {
+  font-size: var(--heading-font-size-xxl);
+}
+h2 {
+  font-size: var(--heading-font-size-xl);
+}
+h3 {
+  font-size: var(--heading-font-size-l);
+}
+h4 {
+  font-size: var(--heading-font-size-m);
+}
+h5 {
+  font-size: var(--heading-font-size-s);
+}
+h6 {
+  font-size: var(--heading-font-size-xs);
+}
 
-p, dl, ol, ul, pre, blockquote {
+p,
+dl,
+ol,
+ul,
+pre,
+blockquote {
   margin-top: 1em;
   margin-bottom: 1em;
 }
 
-code, pre {
+code,
+pre {
   font-size: var(--body-font-size-s);
 }
 
 code {
-  padding: .125em;
+  padding: 0.125em;
 }
 
 pre {
@@ -116,13 +137,15 @@ pre {
 main pre {
   background-color: var(--light-color);
   padding: 1em;
-  border-radius: .25em;
+  border-radius: 0.25em;
   overflow-x: auto;
   white-space: pre;
 }
 
 /* links */
-a,b,strong {
+a,
+b,
+strong {
   font-weight: 700;
 }
 
@@ -137,7 +160,8 @@ a:hover {
 }
 
 /* buttons */
-a.button:any-link, button {
+a.button:any-link,
+button {
   font-family: var(--fixed-font-family);
   display: inline-block;
   box-sizing: border-box;
@@ -157,48 +181,93 @@ a.button:any-link, button {
   border-radius: 5px;
 }
 
-button,input{
-  overflow:visible
+button,
+input {
+  overflow: visible;
 }
 
-button,select{
-  text-transform:none
+button,
+select {
+  text-transform: none;
 }
 
-button,[type="button"],[type="reset"],[type="submit"]{
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
   -webkit-appearance: button;
 }
 
-button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner{
-  border-style:none;
-  padding:0
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
 }
 
-button,input,optgroup,select,textarea{
-  font-family:inherit;
-  font-size:100%;
-  line-height:1.15;
-  margin:0
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
 }
 
-a.button:hover, a.button:focus, button:hover, button:focus  {
+a.button:hover,
+a.button:focus,
+button:hover,
+button:focus {
   background-color: var(--link-hover-color);
   cursor: pointer;
 }
 
-button:disabled, button:disabled:hover {
+button:disabled,
+button:disabled:hover {
   background-color: var(--light-color);
   cursor: unset;
 }
 
-a.button.secondary, button.secondary {
+a.button.secondary,
+button.secondary {
   background-color: unset;
   border: 1px solid currentcolor;
-  color: var(--text-color)
+  color: var(--text-color);
 }
 
 a.button.secondary:hover {
   border: 2px solid currentcolor;
+}
+
+a.button.hyperlink {
+  background: transparent;
+  color: var(--text-color);
+  padding: 0 !important;
+}
+
+a.button.hyperlink:hover {
+  color: var(--link-hover-color) !important;
+}
+
+.align-icon {
+  display: flex;
+  padding: 10px;
+}
+
+.icon-gt {
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.align-icon > .align-center {
+  align-self: center;
+  margin: 5px 0 0 5px;
+}
+.button-container.align-icon:hover {
+  color: var(--link-hover-color) !important;
 }
 
 main img {
@@ -228,10 +297,7 @@ main .section {
   main .section {
     padding: 64px 32px;
   }
-  
 }
-
-
 
 /* section metadata */
 main .section.light,
@@ -239,50 +305,52 @@ main .section.highlight {
   background-color: var(--light-color);
 }
 
-fieldset{
-  padding:.35em .75em .625em
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
 }
 
-legend{
-  box-sizing:border-box;
-  color:inherit;
-  display:table;
-  max-width:100%;
-  padding:0;
-  white-space:normal;
+legend {
+  box-sizing: border-box;
+  color: inherit;
+  display: table;
+  max-width: 100%;
+  padding: 0;
+  white-space: normal;
 }
 
-progress{
-  vertical-align:baseline
+progress {
+  vertical-align: baseline;
 }
 
-textarea{
-  overflow:auto
+textarea {
+  overflow: auto;
 }
 
-[type="checkbox"],[type="radio"]{
-  box-sizing:border-box;
-  padding:0
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box;
+  padding: 0;
 }
 
-[type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button{
-  height:auto
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
 }
 
-[type="search"]{
+[type="search"] {
   -webkit-appearance: textfield;
-  outline-offset:-2px
+  outline-offset: -2px;
 }
 
-[type="search"]::-webkit-search-decoration{
+[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
-::-webkit-file-upload-button{
-  -webkit-appearance:button;
-  font:inherit
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  font: inherit;
 }
 
-[hidden]{
-  display:none
+[hidden] {
+  display: none;
 }
