--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -55,19 +55,29 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
 /* Mobile */
 
 @media (width >= 360px) and (width < 768px) {
+  header nav { 
+    display: block;
+  }
+
   .logo-wrapper img {
     width: 36px;
     height: 36px;
   }
-  /* header nav {
-    display: flex;
-    padding: 0 1.5rem;
-    justify-content: space-between;
-  } */
+  
+  .header nav[aria-expanded="true"] .nav-brand .subnavigation-text-wrapper + .menu-link-wrapper::before {
+    position: absolute;
+    width: 100%;
+    left: 0%;
+    border-top: 1px solid var(--light-border-color);
+    content: " ";
+    top: -15px;
+
+  }
 
   header nav[aria-expanded="false"] .nav-hamburger button {
     position: absolute;
     right: 1.5rem;
+    top: 30px;
   }
 
   header nav[aria-expanded="true"] .icon-location {
@@ -88,8 +98,6 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
     position: relative;   
   }
 
-  
-
   header nav[aria-expanded="false"] .logo-wrapper {
     position: absolute;
     top: 25px;
@@ -102,6 +110,9 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
 
   header nav[aria-expanded="true"] .menu-link-wrapper {
     display: block;
+    position: relative;
+    top: 100px;
+    padding: .55rem 2rem;
   }
 
   header nav[aria-expanded="true"] .logo-wrapper {
@@ -116,7 +127,7 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
   }
 
   header nav[aria-expanded="true"] {
-    border-bottom: 1px solid var(--light-bbb);
+    margin: 0;
   }
 
   header nav[aria-expanded="true"] .nav-hamburger {
@@ -154,16 +165,6 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
     width: 83.3333%;
     margin: 0 auto;
   }
-
-  /* .section {
-    height: calc(100vh - 69px);
-    overflow: auto;
-    position: absolute;
-    top: 80px;
-    width: 100%;
-    left: 0;
-    border-top: 1px solid var(--light-bbb);
-  } */
 
   .header nav .section .default-content-wrapper {
     padding: 1.75rem 1.5rem 0;
@@ -203,41 +204,82 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
   header nav[aria-expanded="false"] .nav-tools .default-content-wrapper .icon-location {
     display: none;
    }
+
+   header nav .icon-link-list-container .icon-container .search {
+    position: absolute;
+    top: 33px;
+    right: 70px;
+   }
+
+   header nav[aria-expanded="true"] .icon-link-list-container .icon-container .search {
+   display: none;
+   }
+
+   header nav .icon-link-list-container .icon-container .search::before {    
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-feature-settings: "liga";
+    content: "search";
+    direction: ltr;
+    display: block;
+    font-family: "bmw_next_icons", arial,helvetica,roboto,sans-serif;
+    font-style: normal;
+    height: 1em;
+    line-height: 1;
+    outline: 1px solid transparent;
+    text-align: left;
+    text-rendering: optimizelegibility;
+    text-transform: none;
+    white-space: nowrap;
+    width: auto;
+    font-size: 1.25rem;
+    color: var(--light-border-color);
+    font-weight: 400;
+  }
 }
 
 /* IPAD */
 @media (width >= 768px) and (width < 1280px) {
-  header nav {
-    padding: 0 3rem;
-    display: flex;
-    justify-content: space-between;
+  .header nav[aria-expanded="true"] .nav-brand .subnavigation-text-wrapper + .menu-link-wrapper::before {
+    position: absolute;
+    width: 106%;
+    left: -5%;
+    border-top: 1px solid var(--light-border-color);
+    content: " ";
+    top: -22px;
   }
 
-  header nav .nav-brand img {
+  header nav[aria-expanded="false"] .logo-wrapper,
+  header nav[aria-expanded="true"] .logo-wrapper {
+    position: absolute;
+    top: 25px;
+    left: 22px;
+  }
+  
+  header nav[aria-expanded="true"] {
+    min-height: 100vh;
+    align-items: baseline;
+    background: var(--background-color);
+    margin: 0;
+    position: absolute;
+    width: 100%;
+    z-index: 99;
+    transition: left .65s cubic-bezier(0,.5,.5,1);
+  }
+
+  header nav .nav-brand .logo-wrapper img {
     width: 52px;
     height: 52px;
   }
   
-  header .nav-wrapper {
-    position: relative;   
-  }
-
-  .nav-hamburger {
-   order: 2;
-  }
-
-  header nav[aria-expanded="true"] .section {
+  header nav[aria-expanded="false"] .nav-hamburger button {
     position: absolute;
-    height: calc(100vh - 85px);
-    overflow: auto;
-    top: 100px;
-    width: 100%;
-    left: 0;
-    border-top: 2px solid #ddd;
+    right: 3.5rem;
   }
-  
-  header nav .section .default-content-wrapper {
-    padding: 1.75rem 3rem 0;
+
+  header nav[aria-expanded="true"] .nav-hamburger button {
+    position: absolute;
+    right: 3.5rem;
   }
   
   header nav .section .default-content-wrapper .button-container a.button {
@@ -249,19 +291,21 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
     line-height: 24px;
   }
 
+  header nav[aria-expanded="false"] .menu-link-wrapper {
+    display: none;
+  }
+  
+  header nav[aria-expanded="true"] .menu-link-wrapper {
+    display: block;
+    position: relative;
+    top: 130px;
+    padding: .55rem 7rem;
+  }
+
   header nav .sections .menu-link-wrapper a {
     padding: 12px 0;
     color: var(--light-border-color);
     font-size: 16px;
-  }
-
-  header nav .section ul {
-    margin-bottom: 0;
-  }
-
-  header nav .section ul, header nav .section p {
-    width: 66.6667%;
-    margin: 0 auto;
   }
 
   header nav[aria-expanded="false"] .nav-tools .default-content-wrapper .icon-search {
@@ -284,7 +328,7 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
   header nav[aria-expanded="true"] .nav-hamburger-icon {
     top: 33px;
     width: 20px;
-    right: 15px;
+    right: 0;
   }
  
   header.white-background .claim-container{
@@ -326,6 +370,38 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
     display: none;
   }
 
+  header nav .icon-link-list-container .icon-container .search {
+    position: absolute;
+    top: 33px;
+    right: 100px;
+   }
+
+   header nav[aria-expanded="true"] .icon-link-list-container .icon-container .search {
+   display: none;
+   }
+ 
+  header nav .icon-link-list-container .icon-container .search::before {    
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-feature-settings: "liga";
+    content: "search";
+    direction: ltr;
+    display: block;
+    font-family: "bmw_next_icons", arial,helvetica,roboto,sans-serif;
+    font-style: normal;
+    height: 1em;
+    line-height: 1;
+    outline: 1px solid transparent;
+    text-align: left;
+    text-rendering: optimizelegibility;
+    text-transform: none;
+    white-space: nowrap;
+    width: auto;
+    font-size: 1.25rem;
+    color: var(--light-border-color);
+    font-weight: 400;
+  }
+  
 }
 
 /* Desktop  */
@@ -458,7 +534,7 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
     white-space: nowrap;
     width: auto;
     font-size: 1.25rem;
-    color: #666;
+    color: var(--light-border-color);
     font-weight: 400;
   }
  
@@ -480,7 +556,7 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
     white-space: nowrap;
     width: auto;
     font-size: 1.25rem;
-    color: #666;
+    color: var(--light-border-color);
     font-weight: 400;
   } 
 
@@ -556,7 +632,7 @@ header nav .nav-hamburger button {
   border-radius: 0;
   padding: 0;
   background-color: var(--background-color);
-  color: #666;
+  color: var(--light-border-color);
   overflow: initial;
   text-overflow: initial;
   white-space: initial;
@@ -614,26 +690,6 @@ header nav[aria-expanded="true"] .nav-hamburger-icon::after {
   bottom: 3px;
   transform: rotate(-45deg);
 }
-
-/* brand */
-
-/* header .nav-brand {
-  grid-area: brand;
-  flex-basis: 0;
-  font-size: var(--heading-font-size-s);
-  font-weight: 700;
-  line-height: 1;
-} */
-
-
-/* sections */
-/* header nav .section {
-  grid-area: sections;
-  flex: 1 1 auto;
-  display: none;
-  visibility: hidden;
-  background-color: var(--overlay-color);
-} */
 
 header nav[aria-expanded="true"] .section {
   display: block;
