Changes to Column, text-image renamed to text-image-v2 with few other changes related to this component

--- a/blocks/text-image-v2/text-image-v2.css
+++ b/blocks/text-image-v2/text-image-v2.css
@@ -1,18 +1,18 @@
-main .text-image-container > div {
+main .text-image-v2-container > div {
   max-width: unset;
 }
   
-main .text-image-container {
+main .text-image-v2-container {
   padding: 30px;
 }
 
-.text-image {
+.text-image-v2 {
   position: relative;
   padding: 32px;
   min-height: 300px;
 }
 
-.text-image p {
+.text-image-v2 p {
   max-width: 600px;
   margin-left: auto;
   margin-right: auto;
@@ -20,7 +20,7 @@ main .text-image-container {
 }
 
 /**
-.text-image picture {
+.text-image-v2 picture {
   max-width: 600px;
   position: absolute;
   z-index: -1;
@@ -29,19 +29,19 @@ main .text-image-container {
   box-sizing: border-box;
 }
 
-.text-image img {
+.text-image-v2 img {
   object-fit: cover;
   width: 50%;
   height: 100%;
 }
 
 **/
-.text-image img {
+.text-image-v2 img {
   width: 800px;
   height: 350px;
 }
 
-.text-image .foreground .text{
+.text-image-v2 .foreground .text{
   font-weight: 900;
   font-size: xxx-large;
 }
